# AuroraYgg

./: .gitignore  README.md
.claude/: launch.json
airdcpp-webclient/: CMakeLists.txt  README.md
airdcpp-webclient/airdcpp-core/: CMakeLists.txt
airdcpp-webclient/airdcpp-webapi/api/: EncryptionApi.cpp  EncryptionApi.h  HubDiscoveryApi.cpp  HubDiscoveryApi.h  MiniHubApi.cpp  MiniHubApi.h  ShareLinkApi.cpp  ShareLinkApi.h  WebUserApi.cpp  WebUserApi.h
airdcpp-webclient/airdcpp-webapi/web-server/: ApiRouter.cpp  Session.cpp  WebUserManager.cpp  WebUserManager.h
airdcpp-webclient/airdcppd/: CDMDebug.cpp  CDMDebug.h  CMakeLists.txt  Client.cpp  Client.h  ConfigPrompt.cpp  ConfigPrompt.h  main.cpp  stacktrace.cpp  stacktrace.h
airdcpp-webui/: .gitignore
airdcpp-webui/src/: App.tsx  aurora-design-tokens.css  aurora-theme.css
aurora-ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
aurora-ui/scripts/: deploy.mjs  prepare-bundle.mjs
aurora-ui/server/: peersApi.ts
aurora-ui/src/: App.tsx
aurora-ui/src-tauri/: Cargo.toml  tauri.conf.json
aurora-ui/src-tauri/capabilities/: default.json
aurora-ui/src-tauri/icons/: icon.icns
aurora-ui/src-tauri/nsis/: hooks.nsh
aurora-ui/src-tauri/resources/default-config/: DCPlusPlus.xml  web-server.json  web-users.json
aurora-ui/src-tauri/src/: lib.rs  main.rs
aurora-ui/src/api/: socket.ts
aurora-ui/src/hooks/: useFilePicker.ts  useHotkeys.ts  useUriHandler.ts
aurora-ui/src/lib/: utils.ts
aurora-ui/src/pages/: AdminPage.tsx  FavoriteHubsPage.tsx  HomePage.tsx  (+11 more)
(+24 files in other folders)
