[package]
name = "aurora"
version = "0.1.0"
description = "Aurora — DC++ client for Yggdrasil mesh network"
authors = ["AuroraYgg"]
license = "GPL-3.0"
repository = "https://github.com/AuroraYgg/aurora"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aurora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2"
winreg = "0.55"
